kubernetes/nbgrader2canvas-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nbgrader2canvas-service
spec:
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 5000
